bigger qrcode, space out mobile navbar links, attempt to fix element flicker

--- a/client/src/styles/game.css
+++ b/client/src/styles/game.css
@@ -457,8 +457,6 @@ label[for='moderator'] {
     font-family: 'signika-negative', sans-serif;
     font-weight: 100;
     box-shadow: 0 -6px 15px rgba(0, 0, 0, 0.5);
-    left: 0;
-    right: 0;
     bottom: 0;
     border-radius: 5px;
     /* width: fit-content; */
@@ -467,6 +465,8 @@ label[for='moderator'] {
     margin: 0 auto;
     max-width: 100%;
     background-color: #1b1a24;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
 }
 
 #game-control-prompt {
